gitops/applications/ci-cd-agent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-cd-agent
  labels:
    app: ci-cd-agent
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: metrics
  selector:
    app: ci-cd-agent
